--- a/Microsoft.Translator/Microsoft.Translator.csproj
+++ b/Microsoft.Translator/Microsoft.Translator.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{E5EE3DD5-0B10-4CD2-B56E-8595ECBB7ED7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Microsoft.Translator</RootNamespace>
+    <RootNamespace>Yam.Microsoft.Translator</RootNamespace>
     <AssemblyName>Microsoft.Translator</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -21,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Debug\Microsoft.Translator.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -30,6 +31,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\Microsoft.Translator.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject />
@@ -62,15 +64,7 @@
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Service References\TranslatorService\Microsoft.Translator.TranslatorService.GetTranslationsResponse.datasource">
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </None>
-    <None Include="Service References\TranslatorService\Microsoft.Translator.TranslatorService.TranslateArray2Response.datasource">
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </None>
-    <None Include="Service References\TranslatorService\Microsoft.Translator.TranslatorService.TranslateArrayResponse.datasource">
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </None>
+    <None Include="app.config" />
     <None Include="Service References\TranslatorService\soap.wsdl" />
     <None Include="Service References\TranslatorService\soap.xsd">
       <SubType>Designer</SubType>
@@ -85,6 +79,15 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="Service References\TranslatorService\SoapService.wsdl" />
+    <None Include="Service References\TranslatorService\Yam.Microsoft.Translator.TranslatorService.GetTranslationsResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\TranslatorService\Yam.Microsoft.Translator.TranslatorService.TranslateArray2Response.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\TranslatorService\Yam.Microsoft.Translator.TranslatorService.TranslateArrayResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <WCFMetadataStorage Include="Service References\TranslatorService\" />
