--- a/Translator/Translator.csproj
+++ b/Translator/Translator.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{23412012-145E-4C41-9C3D-0856934F928E}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Microsoft.Translator</RootNamespace>
+    <RootNamespace>Yam.Microsoft.Translator</RootNamespace>
     <AssemblyName>Translator</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
